place chat alignment fix

--- a/style.css
+++ b/style.css
@@ -1064,8 +1064,6 @@ placechat {
 	font-size: 2px;
 	padding: 0px 1px 0px 1px;
 	text-align: center;
-	left: 0px;
-	top: 1px;
 	z-index: 3;
 	box-shadow: 0px 0px 1px black;
 	transform: translateX(-50%) translateY(-150%);
@@ -1086,6 +1084,7 @@ placechat::after {
 
 placechat span {
 	font-size: 2px;
+	align-self: center;
 }
 
 postcopy {
